Fixed the alignment of the rotating ellipses of the animation

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1754,13 +1754,6 @@ nav {
     height: 100%;
     z-index: -20;
 
-    #panel-three-gray-ellipse {
-      position: absolute;
-      max-width: 40vw;
-      max-height: 70vh;
-      right: -50vw;
-    }
-
     #panel-three-red-ellipse {
       position: absolute;
       max-width: 70vw;
@@ -2264,13 +2257,6 @@ nav {
     width: 100%;
     height: 100%;
     z-index: -20;
-
-    #panel-five-gray-ellipse {
-      position: absolute;
-      max-width: 40vw;
-      max-height: 70vh;
-      right: -50vw;
-    }
 
     #panel-five-red-ellipse {
       position: absolute;
